syntax = "proto3";

package text_embeddings;

service Embedding {
  rpc EmbedText(TextEmbeddingRequest) returns (TextEmbeddingResponse) {}
  rpc EmbedTextStream(stream TextEmbeddingRequest) returns (stream TextEmbeddingResponse) {}
}

message TextEmbeddingRequest {
  string id = 1;
  string text = 2;
}

message TextEmbeddingResponse {
  string id = 1;
  repeated float embedding = 2;
}
